launchpad-buildd (140) UNRELEASED; urgency=medium

  * buildsnap: Catch urllib2.URLError as well as urllib2.HTTPError when
    trying to revoke the proxy token (LP: #1610916).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Jul 2016 11:07:49 +0100

launchpad-buildd (139) trusty; urgency=medium

  * buildsnap: Set LANG=C.UTF-8 when running snapcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Apr 2016 16:11:01 +0100

launchpad-buildd (138) trusty; urgency=medium

  [ Colin Watson ]
  * slave-prep: Output current versions of git-build-recipe, git, and
    qemu-user-static.
  * Always raise exception instances rather than using the two-argument form
    of raise.
  * buildsnap: Run just "snapcraft" rather than "snapcraft all"; works with
    snapcraft << 2.0 and >= 2.3.
  * sbuild-package: Default LANG/LC_ALL to C.UTF-8 (LP: #1552791).

  [ Kit Randel ]
  * Add http/s proxy support for snap builds.
  * Refactor buildsnap into distinct repo, pull, build and proxy token
    revocation phases.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Mar 2016 15:44:12 -0300

launchpad-buildd (137) trusty; urgency=medium

  * Remove handling for pre-karmic versions of Twisted that didn't support
    --umask.
  * Stop cleaning /var/log/launchpad-buildd/ from cron; logrotate handles
    that now.
  * Configure systemd-timesyncd to use the NTP server configured in
    /etc/launchpad-buildd/default.
  * Try to load the nbd module when starting launchpad-buildd
    (LP: #1531171).
  * buildrecipe: Add option parsing framework.
  * Use git-build-recipe to run git-based recipe builds (LP: #1453022).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Jan 2016 11:50:05 +0000

launchpad-buildd (136) trusty; urgency=medium

  * Use twisted.python.log.msg rather than print to write to the log file.
    Twisted 15.2's stdio wrapper tries to decode as ASCII and thus breaks on
    sbuild's UTF-8 section markers, and this seems to be the simplest way to