@@ -2,6 +2,7 @@ launchpad-buildd (140) UNRELEASED; urgency=medium
 
   * buildsnap: Catch urllib2.URLError as well as urllib2.HTTPError when
     trying to revoke the proxy token (LP: #1610916).
+  * lpbuildd.snap: Upload *.manifest files as well as *.snap (LP: #1608432).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Jul 2016 11:07:49 +0100
 
